fix: synchronize snapshot(), guard setAccessible with InaccessibleObjectException (F-02, F-03)